# MuJoCo-for-HNUTER

./: .gitignore  CMakeLists.txt  MJDATA.TXT  MUJOCO_LOG.TXT  allocation.py  analys_roll_plot.py  controller.py  hnuter201.xml  hnuter202.xml  hnuter203.xml  hnuter21_demo.py  hnuter2_01.xml  hnuter2_demo.py  hnuter31demo.py  hnuter41demo.py  hnuter62.py  hnuter65.py  hnuter66.py  hnuter67.py  hnuter68.py  hnuter69.py  hnuter691.py  hnuter692.py  hnuter693.py  hnuter70.py  logger.py  lookinmyeyes.md  main.py  ploter.py  simulation_framework.py  test_hnuter.py  test_trajectory_planner.py  trajectory_planner.py  utils.py
code_history/: hnuter201.xml  hnuter203.xml  hnuter21_demo.py  hnuter31demo.py  hnuter41demo.py  hnuter51demo.py  hnuter61.py  hnuter63.py  hnuter65.py  hnuter66.py  hnuter67.py  hnuter68.py
hnuter_controller_frame/: allocation.py  controller.py  hnuter201.xml  logger.py  main.py  plotter.py  simulation_framework.py  trajectory_planner.py  utils.py
logs/: drone_log_20251109_133047.csv  drone_log_20251109_133250.csv  drone_log_20251109_144633.csv  drone_log_20251109_145732.csv  drone_log_20251109_155034.csv  drone_log_20251109_202929.csv
